modal scrollbar fix

--- a/src/styles/components/modal.sass
+++ b/src/styles/components/modal.sass
@@ -25,7 +25,7 @@
         width: 40%
         min-height: 400px
         max-height: 85vh
-        overflow-y: scroll
+        overflow-y: auto
         margin: 0
         border-radius: 17px
         box-shadow: 0px 0px 80px 70px rgba(0, 0, 0, 0.1)
